--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -17,6 +17,10 @@
     ]
   },
   "permissions": [
-    "contextMenus"
+    "contextMenus",
+    "tabs",
+    "http://*/*", 
+    "https://*/*",
+    "file://*/*"
   ]
 }
